# context-graphs

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json
.claude/skills/context-graph-apply/: SKILL.md
.claude/skills/context-graph-mining/: SKILL.md
.github/workflows/: test.yml
docs/: demo-spec.md  project-plan.md
mining-agent/: pyproject.toml
mining-agent/src/: __init__.py  __main__.py  apply_runner.py  run_cycle.py  runner.py  variant_server.py
mining-agent/tests/: test_apply_runner.py  test_run_cycle.py  test_runner.py  test_variant_server.py
procurement-agent/: .gitignore  pyproject.toml
procurement-agent/scripts/: .gitignore  README.md  pyproject.toml  seed_requests.py  synthetic_data.py
procurement-agent/scripts/tests/: test_synthetic_data.py
procurement-agent/src/: __init__.py  annotations.py  database.py  instrumentation.py  main.py  models.py  seed_data.py  variants.py
procurement-agent/src/agent/: evaluator.py  pipeline.py  tools.py
procurement-agent/tests/: conftest.py  fixtures.py
procurement-agent/tests/integration/: test_api.py  test_database.py  test_process_endpoint.py
procurement-agent/tests/unit/: test_db_path.py  test_evaluator.py  test_instrumentation.py  test_models.py  test_pipeline.py  test_tools.py  test_variants.py
procurement-agent/ui/: .env.local.example  README.md  package-lock.json  package.json  vitest.config.mts
procurement-agent/ui/src/app/: globals.css  layout.tsx  page.tsx
procurement-agent/ui/src/components/: NewRequestForm.tsx  OverrideForm.tsx  PoliciesView.tsx  RequestDetail.tsx  RequestList.tsx  SlideOver.tsx  TopNav.tsx  VendorsView.tsx
procurement-agent/ui/src/components/__tests__/: OverrideForm.test.tsx  RequestList.test.tsx
procurement-agent/ui/src/lib/: api.ts  decision.ts  types.ts
procurement-agent/ui/src/lib/__tests__/: api.test.ts  decision.test.ts  smoke.test.ts
reviewer-agent/: .gitignore  README.md  institutional-knowledge.md  pyproject.toml
reviewer-agent/src/: __init__.py  __main__.py  api_client.py  models.py  reviewer.py
reviewer-agent/tests/: test_api_client.py  test_models.py  test_reviewer.py
