[project]
name = "mining-agent"
version = "0.1.0"
description = "Mine the procurement-agent Arize project for patterns + apply mined patterns as variant configs + orchestrate the self-improvement loop"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1",
    "pydantic>=2.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
