[project]
name = "procurement-agent"
version = "0.1.0"
description = "Procurement approval pipeline demo for context graphs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "langchain>=1.2.16",
    "langchain-anthropic>=0.4",
    "arize-otel<0.12",
    "openinference-instrumentation-langchain>=0.1.63",
    "opentelemetry-api<1.35",
    "opentelemetry-sdk<1.35",
    "opentelemetry-exporter-otlp<1.35",
    "arize>=7.54.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
