[project]
name = "reviewer-agent"
version = "0.1.0"
description = "Human reviewer simulator (Vera Fye) — attaches human feedback to procurement-agent assessments"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
