[project]
name = "procurement-scripts"
version = "0.1.0"
description = "Synthetic data and helper scripts for the procurement demo"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout — top-level .py modules
only-include = ["synthetic_data.py", "seed_requests.py"]
sources = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
